# hunspell

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/hunspell/: CMakeLists.txt
src/innodata/: CMakeLists.txt  main.c
